--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,15 +14,13 @@ const uniqueTags: string[] = [...new Set(tags)];
     <div class="container mx-auto mt-10 max-w-screen-xl px-8">
       <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-4">
         <div class="mt-10">
-          <h3 class="text-xl font-semibold mb-4">About</h3>
+          <h3 class="text-xl font-semibold mb-4">Tentang VisitTaman</h3>
           <p class="text-white text-sm">
-            TechPeople is a blog for tech enthusiasts. We publish articles,
-            stories and tutorials about the latest technology trends and
-            advancements.
+            Sebuah website dan blog untuk mencari artikel tentang wisata Taman.
           </p>
         </div>
         <div class="mt-10">
-          <h3 class="text-xl font-semibold mb-4">Categories</h3>
+          <h3 class="text-xl font-semibold mb-4">Kategori</h3>
           <ul class="text-white text-sm">
             {uniqueTags.map(tag => (
               <li class="mb-2">
@@ -32,19 +30,12 @@ const uniqueTags: string[] = [...new Set(tags)];
           </ul>
         </div>
         <div class="mt-10">
-          <h3 class="text-xl font-semibold mb-4">Contact</h3>
+          <h3 class="text-xl font-semibold mb-4">Kontak Kami</h3>
           <ul class="text-white text-sm">
             <li class="mb-2">
-              <a href="#">Email</a>
-            </li>
+              <a href="mailto:temantaman49@gmail.com">Email</a>
             <li class="mb-2">
-              <a href="#">Twitter</a>
-            </li>
-            <li class="mb-2">
-              <a href="#">Facebook</a>
-            </li>
-            <li class="mb-2">
-              <a href="#">Instagram</a>
+              <a href="https://www.instagram.com/kkn.temantaman/?hl=en" target="_blank" rel="noopener noreferrer">Instagram</a>
             </li>
           </ul>
   </footer>
