color + language change

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,15 +2,15 @@
 import { Image } from "astro:assets";
 import logo from '../images/logo.png'
 ---
-<nav class="bg-gray-900 text-white">
+<nav class="bg-black text-white">
     <div
       class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
     >
       <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <Image src={logo} class="h-14" alt="TechPeople Logo"width={55} height={55}/>
+        <Image src={logo} class="h-14" alt="TemanTaman Logo "width={60} height={60}/>
         <span
           class="self-center text-2xl font-semibold whitespace-nowrap"
-          ><span class="text-indigo-400">Visit</span>Taman</span
+          ><span class="text-tt-green">Visit</span>Taman</span
         >
       </a>
       <button
@@ -39,28 +39,28 @@ import logo from '../images/logo.png'
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
         <ul
-          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 text-white rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 border-gray-700"
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 border-gray-700"
         >
           <li>
             <a
               href="../"
-              class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
+              class="block py-2 px-3 rounded md:p-0 hover:text-tt-green"
               aria-current="page"
-              >Home</a
+              >Beranda</a
             >
           </li>
           <li>
             <a
               href="../articles"
-              class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-              >All Articles</a
+              class="block py-2 px-3 rounded md:p-0 hover:text-tt-green"
+              >Semua Artikel</a
             >
           </li>
           <li>
             <a
               href="../about"
-              class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-              >About</a
+              class="block py-2 px-3 rounded md:p-0 hover:text-tt-green"
+              >Tentang Kami</a
             >
           </li>
         </ul>
