--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,12 @@ const mostRecentArticle: CollectionEntry<'blog'> = allBlogArticles[0];
 
 const otherArticles: CollectionEntry<'blog'>[] = allBlogArticles.slice(1);
 ---
-	<MainLayout title="Articles, Stories & Tutorials for Tech People">
+	<MainLayout title="Semua Tentang Taman">
 		<!-- Top Grid -->
 		<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
 		<div>
 			<h1 class="text-5xl font-bold mt-4 mb-8 leading-tight xl:text-6xl">
-			Explore Madiun Through Our Stories
+			Jelajahi Taman Melalui Website Kami
 			</h1>
 
 			<SearchForm />
