--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -11,7 +11,7 @@ interface Props {
 <div class="flex flex-wrap gap-2">
     {tags.map((tag: string, index: number) => (
      <span
-     class={index % 2 === 0 ? "px-2 py-1 bg-green-500 text-white rounded-full text-xs hover:opacity-90" : "px-2 py-1 bg-indigo-500 text-white rounded-full text-xs hover:opacity-90"}
+     class={index % 2 === 0 ? "px-2 py-1 bg-tt-green text-white rounded-full text-xs hover:opacity-90" : "px-2 py-1 bg-tt-teal text-white rounded-full text-xs hover:opacity-90"}
      ><a href={'/articles/tag/' + tag}>{capitalize(tag)}</a></span>
      ))}
    </div>
