--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -18,7 +18,7 @@ const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection ('blog')
 ---
 
 <MainLayout>
-    <h1 class="text-2xl pb-3">All Articles</h1>
+    <h1 class="text-2xl pb-3">Semua Artikel</h1>
 
     <SearchForm />
 
