--- a/src/pages/articles/search.astro
+++ b/src/pages/articles/search.astro
@@ -27,7 +27,7 @@ const searchResults = allBlogArticles.filter(article => {
 });
 ---
 
-<MainLayout title="Search Results">
+<MainLayout title="Hasil Pencarian">
     <a href="/articles" class="inline-block bg-gray-100 p-2 mb-5 hover:bg-indigo-500 hover:text=white">All Articles</a>
 
     <SearchForm />
