--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,13 +4,9 @@ import Image from "astro/components/Image.astro";
 import error from '../images/error-404.png'
 ---
 
-<MainLayout title="404 - Page Not Found">
+<MainLayout title="404 - Tidak Ditemukan">
     <div class ="flex flex-col items-center justify-items-center gap-7">
         <Image src={error} alt="404" height={250} width={250} class="mt-10" />
-        <h1 class="text-5xl">Page Not Found</h1>
-        <p class="text-2xl mb-10">
-            This Page Does Not Exist, Sorry
-        </p>
-        <a href="/" class="inline-block bg-gray-100 p-2 mb-6 hover:bg-indigo-500 hover:text-white">Go Back Home</a>
+        <a href="/" class="inline-block bg-gray-100 rounded-lg border p-2 mb-6 hover:bg-tt-teal hover:text-white">Kembali ke Beranda</a>
     </div>
 </MainLayout>
