--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro"
 import { Image } from "astro:assets"
 import about from "../images/about.jpg"
 ---
-<MainLayout title="Meet the Team">
+<MainLayout title="Tentang Kami">
       <h1 class="text-4xl font-bold mb-5"> Tentang Visit Taman</h1>
       <div class="flex flex-col md:flex-row items-center justify-between gap-6">
         <div class="w-full md:w-1/2 mb-8 md:mb-0">
