--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -20,10 +20,10 @@ const { Content } = await entry.render();
 ---
 
 <MainLayout>
-  <a href="/articles" class="inline-block bg-gray-100 p-2 mb-6 hover:bg-indigo-500 hover:text-white">Back To Articles</a>
+  <a href="/articles" class="inline-block rounded-lg border bg-gray-100 p-2 mb-6 hover:bg-tt-teal hover:text-white">Back To Articles</a>
   <article>
     <h1 class="text-4xl font-bold mb-2"> {entry.data.title}</h1>
-    <h3 class="text-lg mb-2">Written by {entry.data.author} on {formatDate(entry.data.pubDate)}</h3>
+    <h3 class="text-lg mb-2">Ditulis oleh {entry.data.author} pada {formatDate(entry.data.pubDate)}</h3>
     <Tags tags={entry.data.tags} />
     <img src={'/images/' + entry.data.image} alt="Article Image" class="w-full h-auto rounded-xl my-6" />
     <Content />
