update about us

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,13 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro"
 import { Image } from "astro:assets"
-import about from "../images/about.jpg"
+import about from "../images/aboutus.jpg"
 ---
 <MainLayout title="Tentang Kami">
       <h1 class="text-4xl font-bold mb-5"> Tentang Visit Taman</h1>
       <div class="flex flex-col md:flex-row items-center justify-between gap-6">
         <div class="w-full md:w-1/2 mb-8 md:mb-0">
-            <Image src={about} alt="Tech People Team" class="w-full h-auto rounded-lg shadow-lg"/>
+            <Image src={about} alt="KKN-PPM UGM 2024" class="w-full h-auto rounded-lg shadow-lg"/>
         </div>
         <div class="w-full md:w-1/2">
             <h2 class="text-3xl font-extrabold text-gray-900 mb-4">
