Integrasi map interaktif ArcGIS

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -58,6 +58,13 @@ import logo from '../images/logo.png'
           </li>
           <li>
             <a
+              href="../map"
+              class="block py-2 px-3 rounded md:p-0 hover:text-tt-green"
+              >Peta Interaktif</a
+            >
+          </li>
+          <li>
+            <a
               href="../about"
               class="block py-2 px-3 rounded md:p-0 hover:text-tt-green"
               >Tentang Kami</a
