big article updates + slight bug fixes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const uniqueTags: string[] = [...new Set(tags)];
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">Tentang VisitTaman</h3>
         <p class="text-sm">
-          Sebuah website dan blog untuk mencari artikel tentang wisata Taman.
+          Sebuah website dan blog untuk mencari artikel tentang wisata di sekitar kecamatan Taman, Madiun.
         </p>
       </div>
       <div class="mt-10">
