--- a/src/pages/articles/tag/[...tag].astro
+++ b/src/pages/articles/tag/[...tag].astro
@@ -18,8 +18,8 @@ const tagArticles = allBlogArticles.filter(article => article.data.tags.includes
 ---
 
 <MainLayout>
-  <a href="/articles" class="inline-block bg-gray-100 p-2 mb-6 hover:bg-indigo-500 hover:text-white">Back To Articles</a>
-<h1 class="text-2xl pb-3">#{capitalize(tag)}</h1>
+  <a href="/articles" class="inline-block rounded-lg border bg-gray-100 p-2 mb-6 hover:bg-tt-teal hover:text-white">Kembali ke Semua Artikel</a>
+<h1 class="text-2xl pb-3 font-semibold">Artikel Tentang {capitalize(tag)}</h1>
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
   {tagArticles.map(article => (
     <ArticleCard article={article} />
