--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const otherArticles: CollectionEntry<'blog'>[] = allBlogArticles.slice(1);
 		<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
 		<div>
 			<h1 class="text-5xl font-bold mt-4 mb-8 leading-tight xl:text-6xl">
-			Jelajahi Taman, Madiun Melalui Website Kami
+			Ayo Jelajahi Kecamatan Taman, Madiun!
 			</h1>
 
 			<SearchForm />
