--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,7 +3,7 @@ import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../constants'
 
-const { title = 'Segala Hal Kecamatan Taman'} = Astro.props
+const { title = 'Segala Hal Kecamatan Taman, Madiun'} = Astro.props
 
 interface Props {
   title?: string;
